--- a/src/VSCodeSnippetGenerator.Web/VSCodeSnippetGenerator.Web.csproj
+++ b/src/VSCodeSnippetGenerator.Web/VSCodeSnippetGenerator.Web.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
 
